2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XPathDocument2ChangedEventHandler.cs : fixed incorrect argument.
	* Moved UpdateEventHandler.cs and XmlUpdateEventArgs.cs to sqlxml.

2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlTextReader.cs : BaseURI was broken. This fixes bug #52098.

2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlUrlResolver.cs : GetEntity() does not return direct network stream
	  that may hold up connection. Now it reads up all the content stream.

2003-12-12  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlAttributeCollection.cs,
	  XmlElement.cs : Fixed bug #51415.
	  When adding attribute to an element using Attributes, it failed.

2003-12-11  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : Fixed ReadNode() to call AppendChild() to document
	  after setting all attribute nodes. Modified ReadNode() to handle
	  Depth comparison and error handling (!= to <). It allows MS's
	  SgmlReader bug that returns incorrect Depth.

2003-12-11  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentNavigator.cs : Fixed MoveToNextAttribute (and 
	  MoveToNextNamespace) that might result in NullReferenceException.
	  patch by Sanjay Gupta. This fixed bug #51941 (and possibly #51415)

2003-12-07  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlUrlResolver.cs : Update with recent System.Uri change. This fixes
	  bugzilla #51808 (patch by Jeroen Zwartepoorte, a bit modified).

2003-12-04  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlTextWriter.cs : WriteComment() should block "--", not full "-->".
	* XmlDocumentNavigator.cs : Added null check in MoveToNextAttribute().
	  This may fix bug #51415.

2003-11-28  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlAttribute.cs : set_Prefix checks value when existing is "xmlns".

2003-11-28  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlWriter.cs : patch by Gonzalo (I modified a bit). WriteNode()