@@ -1,3 +1,10 @@
+2003-12-16  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>
+
+	* DTDValidatingReader.cs : Validity check and entity expansion were
+	  incorrectly mixed.
+	* DTDObjectModel.cs, DTDReader.cs, XmlInputStream.cs :
+	  Going to remove XmlInputStream. XmlStreamReader might be replacable.
+
 2003-12-15  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>
 
 	* XPathDocument2ChangedEventHandler.cs : fixed incorrect argument.
